<resources>
    <string name="app_name">Guardian_Portal</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_text_1">Welcome \nTo \nNUST Guardian Portal App</string>
    <string name="welcome_text_2">To activate your acocunt, \nplease check your email for \ninstructions on how to set up \nyour login.</string>
    <string name="welcome_text_3">Once logged in, you will have\n access to your child\'s academic \nprogress, \nreports, and \nannouncements</string>
    <string name="continue_text">Continue</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="name_text">John Doe</string>
    <string name="inbox_text">Inbox</string>
    <string name="academic_record_text">Academic Record</string>
    <string name="feedback_text">Feedback</string>
    <string name="share_text">Share</string>
    <string name="logout_text">Log-out</string>
    <string name="title_text">Academic Record</string>
    <string name="student_number_text">21608045</string>
    <string name="academic_year_text">2023</string>

</resources>